# renfrew-river

./: .gitignore  Cargo.toml  build.rs
clients/backend-tests/: .eslintrc.js  package-lock.json  package.json
clients/pixijs-ui/: .eslintrc.js  index.html  package-lock.json  package.json  prettier.config.js  webpack.config.js
clients/protocol-client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
clients/react-pixijs-ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
clients/web-client/: package-lock.json  package.json
doc/: Notes.md  shady_vm.md
scripts/: find_nonewline_files.py  loc.sh
src/: lib.rs
src/cog/: bind_group.rs  buffer.rs  compute.rs  device.rs  encoder.rs  invoke.rs  mod.rs  shader.rs  shader_registry.rs  task.rs
src/data/: generation.rs  histogram.rs  mod.rs  statistics.rs  vec_map.rs
src/data_store/: file_manager.rs  mod.rs  ruleset_store.rs
src/game/: constants.rs  defaults.rs  extra_flags.rs  game.rs  mod.rs  protocol_documentation.rs  response.rs  server.rs  server_config.rs  settings.rs
src/gpu/: buffer_data_type.rs  buffer_options.rs  cell_data_buffer.rs  constants.rs  device.rs  map_buffer.rs  mod.rs  program_buffer.rs  program_store.rs  register_file_buffer.rs  seq_buffer.rs  shader_registry.rs  world.rs
src/network/: mod.rs  server.rs  server_config.rs  server_state.rs
src/persist/: animals_list.rs  elevation_map.rs  game.rs  mod.rs  program_store.rs  species_list.rs  units_list.rs  world.rs
src/protocol/: command.rs  documentation.rs  mod.rs  (+5 more)
(+508 files in other folders)
