[package]
name = "renfrew-river"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14" }
chumsky = "1.0.0-alpha.7"
clap = { version = "4.4.7", features = ["derive"] }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
log = { version = "0.4" }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive", "std", "alloc"] }
serde_json = "1.0"
sha256 = "1.6.0"
tokio = { version = "1.32", features = ["rt", "macros"] }
warp = { version = "0.3" }
wgpu = { version = "0.17" }
